<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (c) 2012, M. Wensveen (mwensveen.nl) All rights reserved. 
	This program and the accompanying materials are made available under the 
	terms of the Eclipse Public License v1.0 which accompanies this distribution, 
	and is available at http://www.eclipse.org/legal/epl-v10.html -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.mwensveen.m2e.extras</groupId>
	<artifactId>m2eclipse-extras</artifactId>
	<version>6.3.0</version>
	<packaging>pom</packaging>
	<properties>
		<tycho-version>1.3.0</tycho-version>
		<eclipse.stream>2019-06</eclipse.stream>
		<eclipse-repo.url>http://download.eclipse.org/eclipse/updates/4.11/</eclipse-repo.url>
		<eclipse-simrel.url>http://download.eclipse.org/releases/${eclipse.stream}</eclipse-simrel.url>
		<m2e.stream>1.12</m2e.stream>
		<m2e.release.url>https://download.eclipse.org/technology/m2e/releases/${m2e.stream}</m2e.release.url>
		<orbit.stream>R20190602212107</orbit.stream>
		<orbit.release.url>https://download.eclipse.org/tools/orbit/downloads/drops/${orbit.stream}/repository/</orbit.release.url>
	</properties>
	<repositories>
		<repository>
			<id>eclipse</id>
			<layout>p2</layout>
			<url>${eclipse-simrel.url}</url>
		</repository>
		<repository>
			<id>m2e</id>
			<layout>p2</layout>
			<url>${m2e.release.url}</url>
		</repository>
		<repository>
			<id>Orbit 2019-06 M3</id>
			<layout>p2</layout>
			<url>${orbit.release.url}</url>
		</repository>
	</repositories>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<useUIHarness>true</useUIHarness>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<argLine>${tycho.test.jvmArgs}</argLine>
						<!-- kill test JVM it tests take more than 10 minutes (600 seconds) 
							to finish -->
						<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho-version}</version>
					<extensions>true</extensions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
						<requireJREPackageImports>true</requireJREPackageImports>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-versions-plugin</artifactId>
					<version>1.3.0</version>
				</plugin>
				<!-- important for self-hosting -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<debug>true</debug>
					<verbose>true</verbose>
					<compilerVersion>1.7</compilerVersion>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<ignoreTychoRepositories>true</ignoreTychoRepositories>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.9.0</version>
				<inherited>false</inherited>
				<configuration>
					<header>${basedir}/header.txt</header>
					<properties>
						<year>2016</year>
						<owner>M. Wensveen</owner>
						<organization>mwensveen.nl</organization>
					</properties>
					<encoding>UTF-8</encoding>
					<mapping>
						<java>SLASHSTAR_STYLE</java>
					</mapping>
					<aggregate>true</aggregate>
					<useDefaultExcludes>false</useDefaultExcludes>
					<includes>
						<include>**/pom.xml</include>
					</includes>
					<excludes>
						<exclude>*/remoterepo/**</exclude>
						<exclude>*/target/**</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
	<modules>
		<module>nl.mwensveen.m2e.extras.antrun.module</module>
		<module>nl.mwensveen.m2e.extras.cxf.xsdtojava.module</module>
		<module>nl.mwensveen.m2e.extras.xml.transform.module</module>
		<module>nl.mwensveen.m2e.extras.cxf.wsdl2java.module</module>
		<module>nl.mwensveen.m2e.extras.java.formatter.module</module>
		<module>nl.mwensveen.m2e.extras.repo</module>
	</modules>
	<profiles>
		<profile>
			<id>sun-jvm</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://java.sun.com/</value>
				</property>
			</activation>
			<properties>
				<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
			</properties>
		</profile>
		<profile>
			<id>osx</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://www.apple.com/</value>
				</property>
			</activation>
			<properties>
				<tycho.test.jvmArgs>
					-Xmx800m -XX:MaxPermSize=256m
					-XstartOnFirstThread
				</tycho.test.jvmArgs>
			</properties>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.tycho</groupId>
							<artifactId>tycho-surefire-plugin</artifactId>
							<version>${tycho-version}</version>
							<configuration>
								<dependencies>
									<dependency>
										<artifactId>org.eclipse.jdt.launching.macosx</artifactId>
										<version>3.2.100</version>
										<type>eclipse-plugin</type>
									</dependency>
								</dependencies>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>sign</id>
			<activation>
				<property>
					<name>jarsigner.alias</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jarsigner-plugin</artifactId>
						<version>1.2</version>
						<executions>
							<execution>
								<id>sign</id>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
